--- a/my-project/.babelrc
+++ b/my-project/.babelrc
@@ -7,7 +7,7 @@
   "comments": false,
   "env": {
     "test": {
-      "presets": ["env", "stage-2"],
+      "presets": ["vue-app"],
       "plugins": [ "istanbul" ]
     }
   }
